--- a/docs/team/huiminlim.adoc
+++ b/docs/team/huiminlim.adoc
@@ -81,6 +81,8 @@ include::../UserGuide.adoc[tag=stop]
 
 include::../UserGuide.adoc[tag=stats]
 
+include::../UserGuide.adoc[tag=quit]
+
 include::../UserGuide.adoc[tag=FAQ]
 
 include::../UserGuide.adoc[tag=summary]
