--- a/docs/team/chrischenhui.adoc
+++ b/docs/team/chrischenhui.adoc
@@ -224,7 +224,7 @@ include::../UserGuide.adoc[tag=chenhui-userRevisionBank]
 Below are the links to my other contributions in User Guide. Do visit them for a better understanding of the breadth and depth of my effort and contribution.
 ****
 
-* [https://ay1920s1-cs2103t-t11-2.github.io/main/UserGuide.html#em-wordbank-em-commands-span-class-image-img-src-images-load_mode_icon-png-alt-load-width-22-span[Full documentation of WordBank commands]] [https://ay1920s1-cs2103t-t11-2.github.io/main/UserGuide.html#card-commands-span-class-image-img-src-images-card_commands_icon-png-alt-card-commands-icon-width-29-5-span[Full documentation of Card commands]]
+* [https://ay1920s1-cs2103t-t11-2.github.io/main/UserGuide.html#card-commands-span-class-image-img-src-images-card_commands_icon-png-alt-card-commands-icon-width-29-5-span[Full documentation of Card commands]] [https://ay1920s1-cs2103t-t11-2.github.io/main/UserGuide.html#em-wordbank-em-commands-span-class-image-img-src-images-load_mode_icon-png-alt-load-width-22-span[Full documentation of WordBank commands]]
 * [https://ay1920s1-cs2103t-t11-2.github.io/main/UserGuide.html#command-summary[Full command summary]]
 
 //include::../UserGuide.adoc[tag=chenhui-quickstart]
